Changer "Contact" label

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a class="nav-item nav-link" href="#">About me</a>
                     <a class="nav-item nav-link" href="#">Master Career Branch</a>
                     <a class="nav-item nav-link" href="#">Technologies & Tools</a>
-                    <a class="nav-item nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+                    <a class="nav-item nav-link" href="#" tabindex="-1" aria-disabled="true">Profiles & Contact info</a>
                   </div>
                 </div>
               </nav>
