Added main.js file

--- a/index.html
+++ b/index.html
@@ -55,9 +55,6 @@
                 </div>
             </div>
         </section>
-    
-    <script src="./js/jquery.3.5.1.js"></script>
-    <script src="./js/bootstrap.min.js"></script>
         <!--banner-->
         <!--about-->
         <section class="about-area">
@@ -170,6 +167,11 @@
                                     <img src="./img/t10.png" alt="tech10">
                                 </div>
                             </div>
+                            <div class="col-lg-1 col-md-2 col-sm-3">
+                                <div class="single-brand">
+                                    <img src="./img/t11.jpg" alt="tech11">
+                                </div>
+                            </div>
                             
                         </div>
                     </div>
@@ -180,5 +182,8 @@
         </section>
         <!--tech-->
     </main>
+    <script src="./js/jquery.3.5.1.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
