Added functionality for menu navigation

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                     <div class="mr-auto"></div>
                   <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="#">About me</a>
-                    <a class="nav-item nav-link" href="#">Master Career Branch</a>
-                    <a class="nav-item nav-link" href="#">Technologies & Tools</a>
-                    <a class="nav-item nav-link" href="#" tabindex="-1" aria-disabled="true">Profiles & Contact info</a>
+                    <a class="nav-item nav-link" href="#aboutMe">About me</a>
+                    <a class="nav-item nav-link" href="#careerBranch">Master Career Branch</a>
+                    <a class="nav-item nav-link" href="#techTools">Technologies & Tools</a>
+                    <a class="nav-item nav-link" href="#profilesInfo" tabindex="-1" aria-disabled="true">Profiles & Contact info</a>
                   </div>
                 </div>
               </nav>
@@ -44,8 +44,8 @@
                         <h4 class="title-text text-uppercase">Software Engineer</h4>
                         <div class="side-buttons">
                             <div class="d-flex flex-row flex-wrap">
-                                <button type="button" class="btn button primary-button mr-4 text-uppercase">send info</button>
-                                <button type="button" class="btn button secondary-button text-uppercase">Nie wiem po co</button>
+                                <button type="button" class="btn button primary-button mr-4 text-uppercase">send form</button>
+                              <!--  <button type="button" class="btn button secondary-button text-uppercase">Nie wiem po co</button> -->
                             </div>
                         </div>
                     </div>    
@@ -57,7 +57,7 @@
         </section>
         <!--banner-->
         <!--about-->
-        <section class="about-area">
+        <section  id="aboutMe" class="about-area">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
@@ -84,7 +84,7 @@
         </section>
         <!--about-->
         <!--career-->
-        <section class="career-area">
+        <section id="careerBranch" class="career-area">
             <div class="containter-fluid">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 career-title">
@@ -104,7 +104,7 @@
         </section>
         <!--career-->
         <!--tech-->
-        <section class="tech-area">
+        <section id="techTools" class="tech-area">
             <div class="containter-fluid">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 tech-title">
@@ -182,7 +182,7 @@
         </section>
         <!--tech-->
         <!--profiles-->
-        <section class="profiles-area">
+        <section id="profilesInfo" class="profiles-area">
             <div class="containter-fluid">
                 
                 <div class="row">
@@ -192,9 +192,9 @@
                          </h2>
                          <div class="row">
                             <div class="col-lg-12 col-md-12 profiles-branch">
-                                <a href="https://www.facebook.com/andrzej.bronski.5"><i class="fab fa-facebook"></i></a>
-                                <a href="https://github.com/andrzejbronski"><i class="fab fa-github"></i></a>
                                 <a href="https://www.linkedin.com/in/andrzej-broński-076313175/"><i class="fab fa-linkedin"></i></a>
+                                <a href="https://github.com/andrzejbronski"><i class="fab fa-github"></i></a>  
+                                <a href="https://www.facebook.com/andrzej.bronski.5"><i class="fab fa-facebook"></i></a>
                             </div>
                         </div>
                          <h4 class="text-regular">
