--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="main-menu">
 
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#">Może tu logo wstawić</a>
+                <img src="./img/logo.jpg" alt="myBanner" class="img-fluid">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
